<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="318dp"
        android:layout_height="432dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/name"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/yourmail_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/psw"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/psw"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/psd_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/psw2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />


    <EditText
        android:id="@+id/psw2"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/checkInButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorOrangeForButton"
        android:text="@string/check_in_do"
        app:layout_constraintBottom_toTopOf="@+id/enterButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorGrayForButton"
        android:text="@string/enter_do"
        android:textColor="@color/colorGrayForText"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>