<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <ImageView
        android:id="@+id/panel"
        android:layout_width="318dp"
        android:layout_height="300dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light"
        tools:layout_conversion_absoluteHeight="185dp"
        tools:layout_conversion_absoluteWidth="163dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/enter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/panel"
        app:layout_constraintStart_toStartOf="@+id/panel" />

    <EditText
        android:id="@+id/email"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autoLink="email"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/yourmail_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/panel"
        app:layout_constraintStart_toStartOf="@+id/panel"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorGray"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/psd_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/checkInButton"
        app:layout_constraintEnd_toEndOf="@+id/panel"
        app:layout_constraintStart_toStartOf="@+id/panel"
        android:autofillHints="" />

    <Button
        android:id="@+id/checkInButton"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorOrangeForButton"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/enterButton"
        app:layout_constraintEnd_toEndOf="@+id/panel"
        app:layout_constraintStart_toStartOf="@+id/panel" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorGrayForButton"
        android:text="@string/registration"
        android:textColor="@color/colorGrayForText"
        app:layout_constraintBottom_toBottomOf="@+id/panel"
        app:layout_constraintEnd_toEndOf="@+id/panel"
        app:layout_constraintStart_toStartOf="@+id/panel" />
</androidx.constraintlayout.widget.ConstraintLayout>